Fix vertical alignment of `progress`

--- a/textpattern.css
+++ b/textpattern.css
@@ -21,9 +21,11 @@ summary {
     display: none;
 }
 
-/* set correct display for `progress` in IE8-9 */
+/* set correct display for `progress` in IE8-9
+   improve vertical alignment of `progress` in Chrome, Firefox, and Opera */
 progress {
     display: inline-block;
+    vertical-align: baseline;
 }
 
 html {
